fixed map getting squished on phones

--- a/css/style.css
+++ b/css/style.css
@@ -1142,6 +1142,7 @@ form label {
 }
 #about img {
     width: 100%;
+    height: auto;
 }
 
 
